--- a/proyecto 1/index1.html
+++ b/proyecto 1/index1.html
@@ -1,9 +1,9 @@
-<DOCTYPE html></DOCTYPE>
-    <html lang="en">
+<DOCTYPE html>
+    <html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Portafolio Personal</title>
         <link rel="stylesheet" href="css/estilos2.css">
     </head>
     <body>
@@ -11,15 +11,40 @@
             <h1>MI PORTAFOLIO</h1>
             <nav>
                 <ul>
-                    <li><a href="#about">Sobre Mí</a></li>
-                    <li><a href="#portfolio">Portafolio</a></li>
-                    <li><a href="#contact">Contacto</a></li>
+                    <li><a href="#about">Sobre Mí |</a></li>
+                    <li><a href="#portfolio">Portafolio |</a></li>
+                    <li><a href="#contact">Contacto |</a></li>
                 </ul>
             </nav>
         </header>
         <section id="about">
             <h2>Sobre Mí</h2>
             <p>Hola, soy Antonio José Romero, un desarrollador web apasionado por crear soluciones innovadoras</p>    
+        </section>
+        <section id="portfolio">
+            <h2>Portafolio</h2>
+            <div class="gallery">
+                <div class="project">
+                    <img src="proyecto1.jpg" alt="proyecto 1">
+                    <p>Descripción del proyecto 1</p>
+                </div>
+                <div class="project">
+                    <img src="proyecto2.jpg" alt="proyecto 2">
+                    <p>Descripción del proyecto 2</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>contactenos</h2>
+            <form action="/submit" method="post">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="email">Correo Electrónico</label>
+                <input type="email" id="email" name="email" required><br>
+                <label for="message">Mensaje:</label>
+                <textarea name="message" id="message"required></textarea><br>
+                <input type="submit" value="Enviar">
+            </form>
         </section>
     </body>
     </html>
