--- a/proyecto 1/index1.html
+++ b/proyecto 1/index1.html
@@ -46,5 +46,8 @@
                 <input type="submit" value="Enviar">
             </form>
         </section>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d366.6536731689457!2d-73.11351887185226!3d7.128980920990014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e681567af487b3d%3A0x128554b8c72ee23b!2sCl.%2030a%20%2333-51%2C%20Bucaramanga%2C%20Santander!5e0!3m2!1ses-419!2sco!4v1727286660030!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>
+        </div>
     </body>
     </html>
