modifique la carpeta mision 2

--- a/mision 2/index1.html
+++ b/mision 2/index1.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primera pagina javascript</title>
+    <title>clase 2 javascript</title>
     <link href="css/estilos.css" rel="stylesheet">
-<script src="js/app.js"></script>
+<script src="js/app1.js"></script>
 
 </head>
 <body>
-    <script>
-        console.log("hola mundo");
-    </script>
+
 </body>
 </html>
